--- a/MetaWebDesign_32bits/eclipse/p2/org.eclipse.equinox.p2.engine/profileRegistry/epp.package.modeling.profile/.data/.settings/org.eclipse.equinox.p2.metadata.repository.prefs
+++ b/MetaWebDesign_32bits/eclipse/p2/org.eclipse.equinox.p2.engine/profileRegistry/epp.package.modeling.profile/.data/.settings/org.eclipse.equinox.p2.metadata.repository.prefs
@@ -30,6 +30,21 @@ repositories/file\:_home_leo_Descargas_test_eclipse_configuration_org.eclipse.os
 repositories/file\:_home_leo_Descargas_test_eclipse_configuration_org.eclipse.osgi_380_data_listener_1925729951/type=org.eclipse.equinox.internal.p2.metadata.repository.LocalMetadataRepository
 repositories/file\:_home_leo_Descargas_test_eclipse_configuration_org.eclipse.osgi_380_data_listener_1925729951/uri=file\:/home/leo/Descargas/test/eclipse/configuration/org.eclipse.osgi/380/data/listener_1925729951/
 repositories/file\:_home_leo_Descargas_test_eclipse_configuration_org.eclipse.osgi_380_data_listener_1925729951/version=1.0.0
+repositories/file\:_home_leo_Documentos_MetaWebDesign_MetaWebDesign_32bits_eclipse_.eclipseextension/description=
+repositories/file\:_home_leo_Documentos_MetaWebDesign_MetaWebDesign_32bits_eclipse_.eclipseextension/enabled=true
+repositories/file\:_home_leo_Documentos_MetaWebDesign_MetaWebDesign_32bits_eclipse_.eclipseextension/isSystem=true
+repositories/file\:_home_leo_Documentos_MetaWebDesign_MetaWebDesign_32bits_eclipse_.eclipseextension/name=/home/leo/Documentos/MetaWebDesign/MetaWebDesign_32bits/eclipse/.eclipseextension
+repositories/file\:_home_leo_Documentos_MetaWebDesign_MetaWebDesign_32bits_eclipse_.eclipseextension/provider=
+repositories/file\:_home_leo_Documentos_MetaWebDesign_MetaWebDesign_32bits_eclipse_.eclipseextension/type=org.eclipse.equinox.p2.extensionlocation.metadataRepository
+repositories/file\:_home_leo_Documentos_MetaWebDesign_MetaWebDesign_32bits_eclipse_.eclipseextension/uri=file\:/home/leo/Documentos/MetaWebDesign/MetaWebDesign_32bits/eclipse/.eclipseextension
+repositories/file\:_home_leo_Documentos_MetaWebDesign_MetaWebDesign_32bits_eclipse_.eclipseextension/version=1
+repositories/file\:_home_leo_Documentos_MetaWebDesign_MetaWebDesign_32bits_eclipse_configuration_org.eclipse.osgi_380_data_listener_1925729951/enabled=true
+repositories/file\:_home_leo_Documentos_MetaWebDesign_MetaWebDesign_32bits_eclipse_configuration_org.eclipse.osgi_380_data_listener_1925729951/isSystem=true
+repositories/file\:_home_leo_Documentos_MetaWebDesign_MetaWebDesign_32bits_eclipse_configuration_org.eclipse.osgi_380_data_listener_1925729951/name=dropins
+repositories/file\:_home_leo_Documentos_MetaWebDesign_MetaWebDesign_32bits_eclipse_configuration_org.eclipse.osgi_380_data_listener_1925729951/suffix=content.xml
+repositories/file\:_home_leo_Documentos_MetaWebDesign_MetaWebDesign_32bits_eclipse_configuration_org.eclipse.osgi_380_data_listener_1925729951/type=org.eclipse.equinox.internal.p2.metadata.repository.LocalMetadataRepository
+repositories/file\:_home_leo_Documentos_MetaWebDesign_MetaWebDesign_32bits_eclipse_configuration_org.eclipse.osgi_380_data_listener_1925729951/uri=file\:/home/leo/Documentos/MetaWebDesign/MetaWebDesign_32bits/eclipse/configuration/org.eclipse.osgi/380/data/listener_1925729951/
+repositories/file\:_home_leo_Documentos_MetaWebDesign_MetaWebDesign_32bits_eclipse_configuration_org.eclipse.osgi_380_data_listener_1925729951/version=1.0.0
 repositories/http\:__download.eclipse.org_eclipse_updates_4.4/count=1
 repositories/http\:__download.eclipse.org_eclipse_updates_4.4/description=
 repositories/http\:__download.eclipse.org_eclipse_updates_4.4/enabled=true
